[package]
name = "lmc-preprocessor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0"
strum = { version = "0.22", features = ["derive"] }
lazy_static = "1.4.0"
clap = "3.0.0-beta.5"
atty = "0.2"